[package]
name = "learn"
version = "0.1.0"
authors = ["nlam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["full"] }
serde_json = "1.0.56"
serenity = { version = "0.8.6", features = ["client"] }
num-format = "0.4.0"